# tokio-immediate

./: .rules  Cargo.toml  README.md  justfile  rust-toolchain.toml
.devcontainer/: devcontainer.json
.devcontainer/tcp4096/: devcontainer.json
.github/workflows/: ci.yml
.zed/: settings.json
ci/container/base/: Containerfile  gitconfig  tmux.conf  zzzz-cd-workspaces.sh  zzzz-fancy-prompt.sh
example-egui/: Cargo.toml
example-egui-minimal/: Cargo.toml
example-egui-minimal/src/: main.rs
example-egui-web/: Cargo.toml  index.html
example-egui-web/src/: main.rs
example-egui/src/: main.rs
tokio-immediate/: Cargo.toml
tokio-immediate-egui/: Cargo.toml
tokio-immediate-egui/src/: lib.rs
tokio-immediate-tests/: Cargo.toml
tokio-immediate-tests/src/: lib.rs  trigger.rs
tokio-immediate/src/: lib.rs  trigger.rs
tokio-immediate/src/sync/: mod.rs  watch.rs
